apps/nats/base/service-monitor.yaml
apiVersion: v1
kind: Service
metadata:
  name: nats-monitor
  namespace: nats
  labels:
    app.kubernetes.io/name: nats
    app.kubernetes.io/component: monitoring
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: nats
    app.kubernetes.io/instance: nats
  ports:
    - name: monitor
      port: 8222
      targetPort: 8222
      protocol: TCP
